# acronymgenerator-api

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/acronymgenerator/data/: ResponseModels.java
android/src/main/java/com/apiverve/client/: APIClient.java  APIException.java  APIResponse.java
cocoapods/: APIVerveAcronymGenerator.podspec  README.md
cocoapods/Sources/APIVerveAcronymGenerator/: APIClient.swift
cocoapods/Sources/APIVerveClient/: APIError.swift
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
examples/swift/: basic.swift
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: AcronymGeneratorAPIClient.cs  AcronymGeneratorAPIClient.csproj  AcronymGeneratorAPIClient.sln  AcronymGeneratorQueryOptions.cs  QueryOptions.cs  Readme.md  ResponseObj.cs
python/: README.md  pyproject.toml
python/src/apiverve_acronymgenerator/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_acronymgenerator/tests/: test_api.py
python/tests/: test_api.py
